--- a/HTML- Personal Site/Index.html
+++ b/HTML- Personal Site/Index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Rashdan</title>
     <link rel="shortcut icon" href="favicon-16x16.png">
 </head>
 <body>
-    
+    <h1>Mohd Rashdan Moktar</h1> 
+    <p><em>Electrical & Electronics Engineer</em> at <strong>Universiti Teknologi Malaysia</strong></p>
+    <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ligula elit, aliquet sit amet turpis at, luctus viverra ligula. Nunc ut interdum diam.</P>
+    <hr>
+    <h3>Lorem ipsum</h3>
 </body>
 </html>
